eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "api.bank-app.click"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-app-api-service
            port:
              number: 80
